# trussed-totp-pc-tutorial

./: .gitignore  Cargo.toml  Makefile  README.md
src/: authenticator.rs  board.rs  cli.rs  lib.rs  main.rs  platform.rs  store.rs  totp.rs  wireguard.rs
src/platform/: store.rs
